--- a/cashmanager/backend/package.json
+++ b/cashmanager/backend/package.json
@@ -4,16 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "payment",
+    "api",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "express-rate-limit": "^6.11.2",
+    "helmet": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.0",
-    "zod": "^3.25.20"
+    "mongoose": "^7.8.7",
+    "zod": "^3.25.47"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
