--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: cashmanager/cashmanager/backend
+        working-directory: cashmanager/backend
     strategy:
       matrix:
         node-version: [18.x, 20.x]
