--- a/cashmanager/backend/.env
+++ b/cashmanager/backend/.env
@@ -1,5 +1,5 @@
-NODE_ENV=development
 PORT=3000
-MONGODB_URI=mongodb+srv://arshdeepkhalsa60:faBN1QkySO9JqghA@paytm.p9rjdvc.mongodb.net/faBN1QkySO9JqghA
-JWT_SECRET=Harryy12211
+MONGODB_URL=mongodb+srv://arshdeepkhalsa60:faBN1QkySO9JqghA@paytm.p9rjdvc.mongodb.net/faBN1QkySO9JqghA
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+BCRYPT_ROUNDS=10
 FRONTEND_URL=http://localhost:5173
