--- a/cashmanager/backend/.env
+++ b/cashmanager/backend/.env
@@ -2,4 +2,4 @@ PORT=3000
 MONGODB_URL=mongodb+srv://arshdeepkhalsa60:faBN1QkySO9JqghA@paytm.p9rjdvc.mongodb.net/faBN1QkySO9JqghA
 JWT_SECRET=ArshdeeepKhalsa23322
 BCRYPT_ROUNDS=10
-FRONTEND_URL=
+FRONTEND_URL=https://cashmanager-1.onrender.com
